styles/modules/modals/_moderatorDetails.scss
.moderatorDetails {
  .contentBox.mDetailWrapper {
    min-height: 90px;

    & > .mDetail,
    & > .verifiedWrapper {
      min-width: 20%;
      flex-grow: 1;
    }

    & > .mDetail > * {
      max-width: 100%;
      overflow: hidden;
    }

    .verifiedWrapper {
      display: flex;
      align-self: stretch;
      flex-shrink: 0;
      flex-direction: column;
      justify-content: center;
      text-align: center;
      border-width: 1px;
      border-style: solid;
      padding: $pad;

      .verifiedMod {
        display: block;
        bottom: 0;
        font-weight: 700;
        font-size: $tx5b;

        & > .badge {
          margin: 0 auto $padTn auto;
        }

        .tooltipWrapper {

          .arrowBoxWrapper {
            right: 0;
            bottom: 0;
            width: 11px;

            .arrowBox {
              top: 16px; // height of the i icon plus a little
              left: 50%;
            }
          }
        }
      }
    }
  }
}

